--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -10,7 +10,7 @@
           <input matInput type="text" (keyup)="doFilter($event.target)" placeholder="Filter">
         </mat-form-field>
       </div>
-      <table mat-table [dataSource]="dataSource"  matSort>
+      <table mat-table [dataSource]="dataSource" matSortActive="id" matSortDirection="asc" matSort>
 
         <!-- Name Column -->
         <ng-container matColumnDef="firstName">
@@ -50,6 +50,18 @@
           <td mat-cell *matCellDef="let element"> {{element.phoneNo}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status "> Status </th>
+          <td mat-cell *matCellDef="let element"> <mat-form-field appearance="fill">
+            <mat-label>Status</mat-label>
+            <mat-select [value]="element.isActive" (selectionChange)="statusChange(element,$event.value)">
+              <mat-option *ngFor="let status of statuses" [value]="status.value">
+                {{status.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field> </td>
+        </ng-container>
+
         <!-- Details Column -->
         <ng-container matColumnDef="details">
           <th mat-header-cell *matHeaderCellDef> Details </th>
@@ -64,7 +76,7 @@
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef> Delete </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn"  matTooltip="Delete Customer"   matTooltipPosition="above"  (click)="redirectToDelete(element.id)">
+            <button mat-icon-button color="warn"  matTooltip="Delete Customer"   matTooltipPosition="above"  (click)="redirectToDelete(element)">
                 <mat-icon class="mat-18">delete</mat-icon>
             </button>
           </td>
@@ -81,6 +93,14 @@
   </mat-card-content>
 </mat-card>
 
+<!--
+<h4>List of Customers</h4>
+
+<div *ngFor="let customer of customers ; let i=index">
+
+  <span >{{i+1}}.</span> {{customer.firstName}}
+
+</div> -->
 
 
 
