--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,19 @@
       <button color="primary" mat-button routerLink="/customers">Customers</button>
   </mat-drawer>
   <div class="sidenav-content">
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <button mat-icon-button (click)="drawer.toggle()">
-          <mat-icon>menu</mat-icon>
+    <mat-toolbar color="primary" *ngIf="this.authService.isLoggedIn" >
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"  (click)="drawer.toggle()">
+        <mat-icon>menu</mat-icon>
       </button>
-      <span>Angular Material</span>
-      </mat-toolbar-row>
+      <span>My App</span>
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" *ngIf="this.authService.isLoggedIn" (click)="logout()">
+        <span>Logout</span>
+      </button>
     </mat-toolbar>
-      <router-outlet></router-outlet>
+      <app-login  *ngIf="!this.authService.isLoggedIn" ></app-login>
+      <router-outlet  *ngIf="this.authService.isLoggedIn" ></router-outlet>
   </div>
 </mat-drawer-container>
+
+
